# flatflow

./: .clang-format  CMakeLists.txt  LICENSE  example.fbs  flowflat.cpp  main.cpp
flatbuffers/: AST.h  CodeGenerator.cpp  CodeGenerator.h  Compiler.cpp  Compiler.h  Config.cpp  Config.h  Error.cpp  Error.h  Parser.cpp  Parser.h  StaticContext.cpp  StaticContext.h
include/flowflat/: flowflat.h
